Envío de lista de tenants recibiendo peticion del front con autorización del CorsConfig